--- a/sample_app/Gemfile
+++ b/sample_app/Gemfile
@@ -10,7 +10,7 @@ gem 'jquery-rails', '4.3.1'
 gem 'turbolinks',   '5.0.1'
 gem 'jbuilder',     '2.6.1'
 gem 'bcrypt',       '3.1.11'
-
+gem 'faker',        '1.7.3'
 
 group :development, :test do
   gem 'sqlite3', '1.3.13'
