--- a/sample_app/Gemfile
+++ b/sample_app/Gemfile
@@ -16,6 +16,7 @@ gem 'fog',                      '1.40.0'
 gem 'faker',                    '1.7.3'
 gem 'will_paginate',            '3.1.5'
 gem 'bootstrap-will_paginate',  '1.0.0'
+gem 'slim-rails'
 
 group :development, :test do
   gem 'sqlite3', '1.3.13'
