--- a/sample_app/Gemfile
+++ b/sample_app/Gemfile
@@ -17,6 +17,7 @@ gem 'faker',                    '1.7.3'
 gem 'will_paginate',            '3.1.6'
 gem 'bootstrap-will_paginate',  '1.0.0'
 gem 'slim-rails'
+gem 'font-awesome-rails'
 
 group :development, :test do
   gem 'sqlite3', '1.3.13'
