--- a/sample_app/Gemfile
+++ b/sample_app/Gemfile
@@ -1,23 +1,23 @@
 source 'https://rubygems.org'
 
-gem 'rails',                    '5.0.3'
+gem 'rails',                    '~> 5.1'
 gem 'bootstrap-sass',           '3.3.7'
 gem 'puma',                     '3.9.1'
-gem 'sass-rails',               '5.0.6'
+gem 'sass-rails',               '~> 5.0'
 gem 'uglifier',                 '3.2.0'
 gem 'coffee-rails',             '4.2.2'
 gem 'jquery-rails',             '4.3.1'
 gem 'turbolinks',               '5.0.1'
-gem 'jbuilder',                 '2.6.1'
+gem 'jbuilder',                 '~> 2.7'
 gem 'bcrypt',                   '3.1.11'
-gem 'carrierwave',              '1.1.0'
+gem 'carrierwave',              '~> 1.2'
 gem 'mini_magick',              '4.7.0'
 gem 'fog',                      '1.40.0'
 gem 'faker',                    '1.7.3'
 gem 'will_paginate',            '3.1.6'
 gem 'bootstrap-will_paginate',  '1.0.0'
-gem 'slim-rails'
-gem 'font-awesome-rails'
+gem 'slim-rails',               '~> 3.1'
+gem 'font-awesome-rails',       '~> 4.7'
 
 group :development, :test do
   gem 'sqlite3', '1.3.13'
@@ -25,14 +25,14 @@ group :development, :test do
 end
 
 group :development do
-  gem 'web-console',           '3.5.1'
+  gem 'web-console',           '~> 3.5'
   gem 'listen',                '3.0.8'
-  gem 'spring',                '2.0.2'
+  gem 'spring',                '~> 2.0'
   gem 'spring-watcher-listen', '2.0.1'
 end
 
 group :test do
-  gem 'rails-controller-testing', '1.0.2'
+  gem 'rails-controller-testing', '~> 1.0'
   gem 'minitest-reporters',       '1.1.14'
   gem 'guard',                    '2.13.0'
   gem 'guard-minitest',           '2.4.4'
