--- a/sample_app/Gemfile
+++ b/sample_app/Gemfile
@@ -1,5 +1,10 @@
 source 'https://rubygems.org'
 
+git_source(:github) do |repo_name|
+  repo_name = "#{repo_name}/#{repo_name}" unless repo_name.include?("/")
+  "https://github.com/#{repo_name}.git"
+end
+
 gem 'rails',                    '~> 5.1'
 gem 'bootstrap-sass',           '3.3.7'
 gem 'puma',                     '3.9.1'
@@ -18,6 +23,7 @@ gem 'will_paginate',            '3.1.6'
 gem 'bootstrap-will_paginate',  '1.0.0'
 gem 'slim-rails',               '~> 3.1'
 gem 'font-awesome-rails',       '~> 4.7'
+gem 'webpacker', github: 'rails/webpacker'
 
 group :development, :test do
   gem 'sqlite3', '1.3.13'
